# sqlitesearch

./: CLAUDE.md  Makefile  README.md  plan.md  pyproject.toml
.github/workflows/: tests.yml
notebooks/: faq_search.ipynb  faq_search.py
sqlitesearch/: __init__.py  operators.py
sqlitesearch/text/: __init__.py  fts.py
sqlitesearch/vector/: __init__.py  lsh.py
tests/: __init__.py  test_integration.py  test_range_filters.py  test_text_search.py  test_vector_range_filters.py  test_vector_search.py
