[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sqlitesearch"
dynamic = ["version"]
description = "A tiny, SQLite-backed search library for small, local projects"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "sqlitesearch contributors"}
]
keywords = ["search", "sqlite", "fts", "vector-search", "lsh", "hybrid-search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "numpy>=1.24.0",
]

[dependency-groups]
dev = [
    "hatch",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.5.0",
    "requests",
    "minsearch",
]

[tool.hatch.build.targets.wheel]
packages = ["sqlitesearch"]

[tool.hatch.version]
path = "sqlitesearch/__version__.py"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
